fix(toast): Hide scrollbars during animation.
During animation, certain browsers would show scroll bars if the
toast was positioned at the bottom of the parent container.

Fix by wrapping the animated portions in a div with hidden
overflow.

Also, update documentation with notes about positioning and
recommendations.

BREAKING CHANGE

md-toast now applies the enter/leave animations to an inner
div with a class `md-toast-content`. If you have customized
the animations or other styles of your toast, you will need
to update your CSS to account for the new wrapper.

Fixes #2936.

Closes #6029

--- a/src/components/toast/toast-theme.scss
+++ b/src/components/toast/toast-theme.scss
@@ -1,16 +1,18 @@
 md-toast.md-THEME_NAME-theme {
-  background-color: #323232;
-  color: '{{background-50}}';
-
-  .md-button {
+  .md-toast-content {
+    background-color: #323232;
     color: '{{background-50}}';
-    &.md-highlight {
-      color: '{{primary-A200}}';
-      &.md-accent {
-        color: '{{accent-A200}}';
-      }
-      &.md-warn {
-        color: '{{warn-A200}}';
+
+    .md-button {
+      color: '{{background-50}}';
+      &.md-highlight {
+        color: '{{primary-A200}}';
+        &.md-accent {
+          color: '{{accent-A200}}';
+        }
+        &.md-warn {
+          color: '{{warn-A200}}';
+        }
       }
     }
   }
